--- a/style.css
+++ b/style.css
@@ -1,7 +1,7 @@
 /* style.css */
 body {
   font-family: Arial, sans-serif;
-  background: #f2f2f2;
+  background:rgb(87, 115, 180);
   margin: 0;
   padding: 40px;
 }
@@ -52,7 +52,7 @@ button {
   margin-top: 20px;
   width: 100%;
   padding: 10px;
-  background-color: #4f46e5;
+  background-color:rgb(91, 162, 136);
   color: white;
   border: none;
   border-radius: 6px;
@@ -61,7 +61,7 @@ button {
 }
 
 button:hover {
-  background-color: #4338ca;
+  background-color:rgb(143, 198, 101);
 }
 
 .radio-group {
@@ -75,7 +75,7 @@ button:hover {
   display: flex;
   align-items: center;
   gap: 5px;
-  background-color: #f0f0f0;
+  background-color:rgb(240, 240, 240);
   padding: 6px 10px;
   border-radius: 6px;
   cursor: pointer;
